# aiida-flexpart

./: .coveragerc  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  setup.json  setup.py
.github/: check_version.py
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_flexpart/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py  utils.py
aiida_flexpart/calculations/: collect_sens.py  cosmo.py  flexpart_cosmo.py  flexpart_ifs.py  flexpart_post.py  inversion.py  new_plugin.py  post_processing.py
aiida_flexpart/data/: locations.yaml  nc_data.py
aiida_flexpart/parsers/: collect_sens.py  cosmo.py  flexpart_cosmo.py  flexpart_ifs.py  flexpart_post.py  inversion.py
aiida_flexpart/templates/: AGECLASSES.j2  COMMAND.j2  COMMAND_ifs.j2  OUTGRID.j2  OUTGRID_NEST.j2  OUTGRID_NEST_ifs.j2  OUTGRID_ifs.j2  RELEASES.j2
aiida_flexpart/workflows/: child_meteo_workflow.py  child_sim_workflow.py  inspect.py  inversion_workflow.py  multi_dates_workflow.py  parent_workflow.py
config/: code_bash_cosmo.yaml  code_bash_ifs.yaml  code_collect_sensitivities.yaml  code_flexpart_cosmo.yaml  code_flexpart_ifs.yaml  code_post_processing.yaml  computer-daint-direct.yaml  computer-daint.yaml  daint-configure.yaml  params.yaml  test_code.yaml
docs/source/: conf.py  index.rst
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: daint.yaml  example_01.py  example_cosmo.py  example_ifs.py  example_workflow.py  example_workflow_combi.py  flexpart@daint.yaml  meteo_inputs.yaml  outgrid.yaml  outgrid_nest.yaml  test_new_plugin.py  visualising_graphs.ipynb
examples/.ipynb_checkpoints/: visualising_graphs-checkpoint.ipynb
examples/input_files/: AGECLASSES  COMMAND  INPUT_PHY  OUTGRID  OUTGRID_NEST  RELEASES
examples/inputs/: command.yaml  command_.yaml  input_phy.yaml  location_groups.yaml  locations.yaml  meteo_inputs.yaml  outgrid.yaml  release.yaml
notebook/: notebook.ipynb
tests/: test_calculations.py  test_cli.py
